tests/eval/exp/good/id.scilla
let id = tfun 'X => fun (x: 'X) => x in
let id_int = @id Int32 in
let n = Int32 42 in		
id_int n	
