tests/eval/exp/bad/msg_error.scilla
let x = Int32 42 in
let ff = fun (z : Int32) => x in
let y = x in
let a = y in
let m = {tag : Main; amount : x; code: ff} in
m
